# journal-backend

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md
.sqlx/: query-0cceecc59c53e8fb1047b20493137c804fb3392057833217b30e0905d0cf25fe.json  query-137bde31ac8ca164904906d04c3f3a5a5f9cdba3f1ab148d9248990ccb20bb81.json  query-23371ba501553e95c0db6f6e846667c142bb30ff0d06c6efa5c46b6df27d82e9.json  query-2e0fd5ee9f760649d9feaa0e0e07920afa69935a340841622271b568c97d35f7.json  query-36a5033ed61e724684d4ab023e6ddaae0b95ec50179e692401a200f56b8debd0.json  query-3ec421da22cc0d11351d3cf7a25ae24a85c606d0ed235a45fc0ad24cc8ee9b27.json  query-5c6a1e6799dbd9513b57a18a03079c7071e767467b4eed8b004e5e73687fcdd3.json  query-5c73b98c04e34bc64260674cf998d4401593a7fd3f635498990808d6d76e534c.json  query-613562db22d5ecb0d17e0bc602fc59db41bf97e578b23f2a25899c8e2e5e06bc.json  query-8f50b88a35a4e4f36ceb329717c860d4ed816ed746ba1de2dd0326abd57bc99a.json  query-98025421e679422c072961f42588421216ca828a1485ade5ecf93397e33aa7a4.json  query-9df81799917b4c1ee934e05ba9096b55bc233a27c912f6a6f8997b309b2dd3c1.json  query-b162b6791f2040ccd69eb3aea969d9c8334a4accb039c2701d94edc23952e2ae.json  query-b56113317c22bd8b6af2dea676e569d98d14af0976153911ecc87f423951bc72.json  query-d26ce97af2b0b4b4c408bc7c15069c631a11fecedbf9dd7cba4859747fe5777c.json  query-e32bee6969255a9c3625c4722e95b0dbb6685a8a70f2c543f52db8eeb5e5b7b3.json  query-ff94cc4043dcf257b529500d6f3757a1b070f79007b23650d8f61e7f631b5065.json
migrations/: 01_create_tables.sql
src/: journal.rs  lib.rs  main.rs  model.rs  user.rs
src/journal/: handler.rs  model.rs  repository.rs  service.rs
src/user/: handler.rs  middleware.rs  model.rs  repository.rs  service.rs
tests/: event_type_repository_test.rs  journal_entry_repository_test.rs  journal_repository_test.rs  user_repository_test.rs
tests/common/: mod.rs
