[package]
name = "journal-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
actix-web = "4.9"
actix-web-httpauth = "0.8.2"
actix-cors = "0.7"
actix-web-prom = { version = "0.8", features = ["process"] }
serde = { version = "1.0.210", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
async-trait = "0.1.82"
chrono = { version = "0.4.38", default-features = false, features = ["clock", "std", "serde"] }
log = "0.4.22"
env_logger = "0.11.5"
dotenv = "0.15"
anyhow = "1.0.89"
thiserror = "1.0.63"
validator = { version = "0.18.1", features = ["derive"] }
derive_more = { version = "1", features = ["debug", "display"] }
mime = "0.3.17"
uuid = { version = "1.10", features = ["v4", "fast-rng", "serde"] }
argon2 = { version = "0.5.3", features = ["std"] }
jsonwebtoken = { version = "9.3", default-features = false }

[dev-dependencies]
testcontainers-modules = { version = "0.10", features = ["postgres"] }
mockall = "0.13"
lazy_static = "1.5"
ctor = "0.2.8"
