[package]
name = "journal-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43", features = ["rt-multi-thread", "macros"] }
actix-web = "4.9"
actix-web-httpauth = "0.8.2"
actix-cors = "0.7"
actix-web-prom = { version = "0.9", features = ["process"] }
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
async-trait = "0.1.86"
chrono = { version = "0.4.39", default-features = false, features = ["clock", "std", "serde"] }
log = "0.4.25"
env_logger = "0.11.6"
dotenvy = "0.15.7"
anyhow = "1.0.95"
thiserror = "2.0.11"
validator = { version = "0.20.0", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["debug", "display"] }
mime = "0.3.17"
uuid = { version = "1.13.1", features = ["v4", "fast-rng", "serde"] }
argon2 = { version = "0.5.3", features = ["std"] }
jsonwebtoken = { version = "9.3.1", default-features = false }

[dev-dependencies]
testcontainers-modules = { version = "0.11.6", features = ["postgres"] }
mockall = "0.13.1"
lazy_static = "1.5"
ctor = "0.3"
